--- a/index.html
+++ b/index.html
@@ -1591,6 +1591,464 @@
         }
       }
 
+      function atributos_sabedoria(atributo, sabedoria) {
+        if (sabedoria == 1) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return -6;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "80%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 2) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return -4;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "60%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 3) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return -3;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "50%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 4) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return -2;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "45%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 5) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return -1;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "40%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 6) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return -1;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "35%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 7) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return -1;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "30%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 8) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 0;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "25%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 9) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 0;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "20%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 10) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 0;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "15%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 11) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 0;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "10%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 12) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 0;
+          } else if (atributo == "Magias Extras") {
+            return "Nenhuma";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "5%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 13) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 0;
+          } else if (atributo == "Magias Extras") {
+            return "1º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 14) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 0;
+          } else if (atributo == "Magias Extras") {
+            return "1º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 15) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 1;
+          } else if (atributo == "Magias Extras") {
+            return "2º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 16) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 2;
+          } else if (atributo == "Magias Extras") {
+            return "2º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 17) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 3;
+          } else if (atributo == "Magias Extras") {
+            return "3º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 18) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 4;
+          } else if (atributo == "Magias Extras") {
+            return "4º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return [];
+          }
+        } else if (sabedoria == 19) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 4;
+          } else if (atributo == "Magias Extras") {
+            return "1º, 4º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return ["Causar Medo", "Encantar Pessoa", "Comanda", "Amigos", "Hipnose"];
+          }
+        } else if (sabedoria == 20) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 4;
+          } else if (atributo == "Magias Extras") {
+            return "2º, 4º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return ["Esquecer", "Paralisar Pessoa", "Raio de Esquecimanto", "Assustar"];
+          }
+        } else if (sabedoria == 21) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 4;
+          } else if (atributo == "Magias Extras") {
+            return "3º, 5º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return ["Medo"];
+          }
+        } else if (sabedoria == 22) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 4;
+          } else if (atributo == "Magias Extras") {
+            return "4º, 5º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return ["Encantar Monstro", "Confusão", "Emoção", "Falha", "Sugestão"];
+          }
+        } else if (sabedoria == 23) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 4;
+          } else if (atributo == "Magias Extras") {
+            return "5º, 5º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return ["Caos", "Debilitar Mente", "Paralisar Monstro", "Jarro Arcano", "Busca"];
+          }
+        } else if (sabedoria == 24) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 4;
+          } else if (atributo == "Magias Extras") {
+            return "6º, 6º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return ["Tarefa", "Sugestão em Massa", "Cetro do Poder"];
+          }
+        } else if (sabedoria == 25) {
+          if (atributo == "Ajuste de Defesa Contra Magia") {
+            return 4;
+          } else if (atributo == "Magias Extras") {
+            return "6º, 7º";
+          } else if (atributo == "Chance da Magia Falhar") {
+            return "0%";
+          } else if (atributo == "Imunidade à Magia") {
+            return ["Antipatia/Simpatia", "Morte", "Encantar as Massas"];
+          }
+        }
+      }
+
+      function atributos_carisma(atributo, carisma) {
+        if (carisma == 1) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 0;
+          } else if (atributo == "Fator de Lealdade") {
+            return -8;
+          } else if (atributo == "Ajuste de reação") {
+            return -7;
+          }
+        } else if (carisma == 2) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 1;
+          } else if (atributo == "Fator de Lealdade") {
+            return -7;
+          } else if (atributo == "Ajuste de reação") {
+            return -6;
+          }
+        } else if (carisma == 3) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 1;
+          } else if (atributo == "Fator de Lealdade") {
+            return -6;
+          } else if (atributo == "Ajuste de reação") {
+            return -5;
+          }
+        } else if (carisma == 4) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 1;
+          } else if (atributo == "Fator de Lealdade") {
+            return -5;
+          } else if (atributo == "Ajuste de reação") {
+            return -4;
+          }
+        } else if (carisma == 5) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 2;
+          } else if (atributo == "Fator de Lealdade") {
+            return -4;
+          } else if (atributo == "Ajuste de reação") {
+            return -3;
+          }
+        } else if (carisma == 6) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 2;
+          } else if (atributo == "Fator de Lealdade") {
+            return -3;
+          } else if (atributo == "Ajuste de reação") {
+            return -2;
+          }
+        } else if (carisma == 7) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 3;
+          } else if (atributo == "Fator de Lealdade") {
+            return -2;
+          } else if (atributo == "Ajuste de reação") {
+            return -1;
+          }
+        } else if (carisma == 8) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 3;
+          } else if (atributo == "Fator de Lealdade") {
+            return -1;
+          } else if (atributo == "Ajuste de reação") {
+            return 0;
+          }
+        } else if (carisma == 9) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 4;
+          } else if (atributo == "Fator de Lealdade") {
+            return 0;
+          } else if (atributo == "Ajuste de reação") {
+            return 0;
+          }
+        } else if (carisma == 10) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 4;
+          } else if (atributo == "Fator de Lealdade") {
+            return 0;
+          } else if (atributo == "Ajuste de reação") {
+            return 0;
+          }
+        } else if (carisma == 11) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 4;
+          } else if (atributo == "Fator de Lealdade") {
+            return 0;
+          } else if (atributo == "Ajuste de reação") {
+            return 0;
+          }
+        } else if (carisma == 12) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 5;
+          } else if (atributo == "Fator de Lealdade") {
+            return 0;
+          } else if (atributo == "Ajuste de reação") {
+            return 0;
+          }
+        } else if (carisma == 13) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 5;
+          } else if (atributo == "Fator de Lealdade") {
+            return 0;
+          } else if (atributo == "Ajuste de reação") {
+            return 1;
+          }
+        } else if (carisma == 14) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 6;
+          } else if (atributo == "Fator de Lealdade") {
+            return 1;
+          } else if (atributo == "Ajuste de reação") {
+            return 2;
+          }
+        } else if (carisma == 15) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 7;
+          } else if (atributo == "Fator de Lealdade") {
+            return 3;
+          } else if (atributo == "Ajuste de reação") {
+            return 3;
+          }
+        } else if (carisma == 16) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 8;
+          } else if (atributo == "Fator de Lealdade") {
+            return 4;
+          } else if (atributo == "Ajuste de reação") {
+            return 5;
+          }
+        } else if (carisma == 17) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 10;
+          } else if (atributo == "Fator de Lealdade") {
+            return 6;
+          } else if (atributo == "Ajuste de reação") {
+            return 6;
+          }
+        } else if (carisma == 18) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 15;
+          } else if (atributo == "Fator de Lealdade") {
+            return 8;
+          } else if (atributo == "Ajuste de reação") {
+            return 7;
+          }
+        } else if (carisma == 19) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 20;
+          } else if (atributo == "Fator de Lealdade") {
+            return 10;
+          } else if (atributo == "Ajuste de reação") {
+            return 8;
+          }
+        } else if (carisma == 20) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 25;
+          } else if (atributo == "Fator de Lealdade") {
+            return 12;
+          } else if (atributo == "Ajuste de reação") {
+            return 9;
+          }
+        } else if (carisma == 21) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 30;
+          } else if (atributo == "Fator de Lealdade") {
+            return 14;
+          } else if (atributo == "Ajuste de reação") {
+            return 10;
+          }
+        } else if (carisma == 22) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 35;
+          } else if (atributo == "Fator de Lealdade") {
+            return 16;
+          } else if (atributo == "Ajuste de reação") {
+            return 11;
+          }
+        } else if (carisma == 23) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 40;
+          } else if (atributo == "Fator de Lealdade") {
+            return 18;
+          } else if (atributo == "Ajuste de reação") {
+            return 12;
+          }
+        } else if (carisma == 24) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 45;
+          } else if (atributo == "Fator de Lealdade") {
+            return 20;
+          } else if (atributo == "Ajuste de reação") {
+            return 13;
+          }
+        } else if (carisma == 25) {
+          if (atributo == "Nº Máximo de aliados") {
+            return 50;
+          } else if (atributo == "Fator de Lealdade") {
+            return 20;
+          } else if (atributo == "Ajuste de reação") {
+            return 14;
+          }
+        }
+      }
+
       function sortear_atributos(callback) {
         rolar3d6(forca => {
           rolar3d6(destreza => {
@@ -1641,8 +2099,19 @@
                           "Número Máx Magias/Círculo": "Nenhuma",
                           "Imunidade a Magias": "Nenhuma"
                         },
-                        "Sabedoria": { "Valor da Habilidade": sabedoria },
-                        "Carisma": { "Valor da Habilidade": carisma },
+                        "Sabedoria": {
+                          "Valor da Habilidade": sabedoria,
+                          "Ajuste de Defesa Contra Magia": 0,
+                          "Magias Extras": "Nenhuma",
+                          "Chance da Magia Falhar": "0%",
+                          "Imunidade à Magia": []
+                        },
+                        "Carisma": {
+                          "Valor da Habilidade": carisma,
+                          "Nº Máximo de aliados": 0,
+                          "Fator de Lealdade": 0,
+                          "Ajuste de reação": 0
+                        },
                       },
                       "Idiomas": [],
                       "Pontos de Perícia": {
@@ -2095,6 +2564,17 @@
             personagem["Pontos de Perícia"]["Perícias Comuns Inicial"] = 3 + numero_de_linguas;
             personagem["Pontos de Perícia"]["Perícias Comuns Nº Níveis"] = 4;
           }
+
+          let sabedoria = personagem["Habilidades"]["Sabedoria"]["Valor da Habilidade"];
+          personagem["Habilidades"]["Sabedoria"]["Ajuste de Defesa Contra Magia"] = atributos_sabedoria("Ajuste de Defesa Contra Magia", sabedoria);
+          personagem["Habilidades"]["Sabedoria"]["Magias Extras"] = atributos_sabedoria("Magias Extras", sabedoria);
+          personagem["Habilidades"]["Sabedoria"]["Chance da Magia Falhar"] = atributos_sabedoria("Chance da Magia Falhar", sabedoria);
+          personagem["Habilidades"]["Sabedoria"]["Imunidade à Magia"] = atributos_sabedoria("Imunidade à Magia", sabedoria);
+
+          let carisma = personagem["Habilidades"]["Carisma"]["Valor da Habilidade"];
+          personagem["Habilidades"]["Carisma"]["Nº Máximo de aliados"] = atributos_carisma("Nº Máximo de aliados", carisma);
+          personagem["Habilidades"]["Carisma"]["Fator de Lealdade"] = atributos_carisma("Fator de Lealdade", carisma);
+          personagem["Habilidades"]["Carisma"]["Ajuste de reação"] = atributos_carisma("Ajuste de reação", carisma);
 
           callback();
 
