--- a/index.html
+++ b/index.html
@@ -632,8 +632,14 @@
             'Ele toma-se imune à magias de Encantar lançadas por criaturas da floreste depois que atinge o 7º nível.',
             'Ele ganha 1 habilidade de se metamorfosear em um réptil, ave ou mamífero até três vezes por dia após atingir o 7º nível. Quando o druida assume uma nova forma, ele cura de 1d6x10% de todo o dano que porventura tenha sofrido.',
             'Um Druida não pode usar o poder da fé contra mortos-vivos.',
-            'O visco é um importante símbolo sagrado para os druidas, e é um componente necessário (símbolo sagrado) para algumas magias. Para ser realmente eficiente, o visco deve ser colhido sob a luz da tua cheia, com uma foice de prata especialmente feita para este propósito. Visco obtido por outros meios reduz em 50% a eficiência de uma magia, se ela causar dano ou tiver uma área de efeito, e concede ao alvo um bônus de +2 em seu teste de resistência.'
-            '' // página 56
+            'O visco é um importante símbolo sagrado para os druidas, e é um componente necessário (símbolo sagrado) para algumas magias. Para ser realmente eficiente, o visco deve ser colhido sob a luz da tua cheia, com uma foice de prata especialmente feita para este propósito. Visco obtido por outros meios reduz em 50% a eficiência de uma magia, se ela causar dano ou tiver uma área de efeito, e concede ao alvo um bônus de +2 em seu teste de resistência.',
+            'Os druidas, como uma classe, não moram permanentemente em castelos, cidades ou vilas. Eles preferem viver em bosques sagrados, onde erguem pequenas cabanas de tronco, pedras ou relva.',
+            'No 12º nível, o personagem adquire o título oficial de druida (nível inferior ao 12º são conhecidos como iniciados).',
+            'Quando um personagem ascende ao 12° nível, ele ganha três subalternos, cujos níveis dependem da posição do novo druida entre os nove druidas da região. O druida com mais pontos de experiência é servido por três iniciados do 9° nível; o segundo com mais experiência é servido por três iniciados do 8° nível, e assim por diante, até que o druida menos experiente é servido por três iniciados do 1º nível.',
+            'Apenas três arquidruidas (13° nível) podem operar na mesma região geográfica. Para tornar-se um arquidruida, um druida do 12° nível deve derrotar um deles ou avançar para essa posição, caso ela esteja vaga. Cada um dos três arquidruidas é servido por três iniciados do 10º nível.',
+            'Dentre os arquidruidas de todo o mundo, três são escolhidos para servir ao Druida Venerável.',
+            'Há apenas um grande druida (14º nível) em uma área geográfica. Ele, por sua vez, ganhou sua posição derrotando o grande druida anterior. O grande druida é servido por três iniciados do 11° nível.',
+            ''
           ],
           armas: ["Clava", "Foice", "Dardo", "Lança", "Adaga", "Cimitarra", "Funda", "Cajado"]
         },
